--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
            <nav>
               <ul id="menu">
                 <li>
-                    <a href="newletter.html">Newsletter <i class="fa-solid fa-envelope"></i></a>
+                    <a href="sign-up.html">Sign Up <i class="fa-solid fa-envelope"></i></a>
+                </li>
+                <li>
+                    <a href="barb.html">Barbarian <i class="fa-solid fa-axe-battle"></i></a>
                 </li>
                 <li>
                     <a href="monk.html">Monk <i class="fa-solid fa-hand-fist"></i></a>
-                </li>
-                <li>
-                    <a href="dh.html">Demon Hunter <i class="fa-sharp fa-regular fa-bow-arrow"></i></a>
                 </li>
                 <li>
                     <a href="index.html">Home <i class="fa-solid fa-house"></i></a>
@@ -31,17 +31,20 @@
            </nav>
     </header>
 
-    <!-- Hero section -->
-
     <section id="hero-outer">
-        <div class="hero-image">
-            <div class="hero-text">
-              <h1>I am John Doe</h1>
-              <p>And I'm a Photographer</p>
-              <button>Hire me</button>
-            </div>
-          </div>
-    </section>    
+        <div id="hero-image"></div>
+    </section>
+
+    <section id="main-info">
+        <h2>What you can find on the page</h2>
+        <ul>
+            <li>Monk Guides</li>
+            <li>Barbarian Guides</li>
+            <li>More Guides In The Future</li>
+        </ul>
+
+
+    </section>
     
     <footer>
         <ul class="social-networks">
