--- a/monk.html
+++ b/monk.html
@@ -23,7 +23,7 @@
                     <a href="monk.html">Monk <i class="fa-solid fa-hand-fist"></i></a>
                 </li>
                 <li>
-                    <a href="dh.html">Demon Hunter <i class="fa-solid fa-bow-arrow"></i></a>
+                    <a href="barb.html">Demon Hunter <i class="fa-solid fa-bow-arrow"></i></a>
                 </li>
                 <li>
                     <a href="index.html">Home <i class="fa-solid fa-house"></i></a>
