--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="barb.html">Barbarian <i class="fa-solid fa-axe-battle"></i></a>
                 </li>
                 <li>
-                    <a href="monk.html">Monk <i class="fa-solid fa-hand-fist"></i></a>
+                    <a href="monk.html">Monk </a>
                 </li>
                 <li>
                     <a href="index.html">Home <i class="fa-solid fa-house"></i></a>
