changed file way for styles.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Diablo 3 Guides For Everyone">
     <meta name="keywords" content="Diablo Diablo-3 Arpg Game Games Dungeon-Crawler Guides Class-Guides">
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="../Norse-Mythology/assets/css/styles.css">
     <title>Norse Mythology</title>
 </head>
 <body>
