changed keywords and description to macth

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Diablo 3 Guides For Everyone">
-    <meta name="keywords" content="Diablo Diablo-3 Arpg Game Games Dungeon-Crawler Guides Class-Guides">
+    <meta name="description" content="Norse Mythology Fan Site">
+    <meta name="keywords" content="Norse Old-Norse Mythology Odin Thor Loki Freya Gods">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Norse Mythology</title>
 </head>
